force-app/main/default/objects/Lead/fields/Applied_for__c.field-meta.xml
<CustomField>
    <fullName>Applied_for__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applied for</label>
    <referenceTo>Job_Application__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>