force-app/main/default/objects/Lead/fields/Candidate_S__c.field-meta.xml
<CustomField>
    <fullName>Candidate_S__c</fullName>
    <label>Candidate Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Portal</fullName>
                <default>true</default>
                <label>Portal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>