force-app/main/default/objects/Lead/fields/Job_Applied_For__c.field-meta.xml
<CustomField>
    <fullName>Job_Applied_For__c</fullName>
    <label>Job Applied For</label>
    <length>30</length>
    <type>Text</type>
</CustomField>