force-app/main/default/objects/Lead/fields/Not_Meet_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Meet_Reason__c</fullName>
    <label>Not Meet Reason</label>
    <type>TextArea</type>
</CustomField>