force-app/main/default/objects/Lead/fields/OnBoarding_Start__c.field-meta.xml
<CustomField>
    <fullName>OnBoarding_Start__c</fullName>
    <inlineHelpText>When did OnBoarding Journey Started</inlineHelpText>
    <label>OnBoarding Start</label>
    <type>Date</type>
</CustomField>