force-app/main/default/objects/Lead/fields/Profile_Matching__c.field-meta.xml
<CustomField>
    <fullName>Profile_Matching__c</fullName>
    <label>Profile Matching</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>