force-app/main/default/objects/Lead/listViews/Candidate_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Candidate_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Candidate Queue</label>
    <queue>Candidate_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>