force-app/main/default/objects/Lead/listViews/Lead_Candidate.listView-meta.xml
<ListView>
    <fullName>Lead_Candidate</fullName>
    <columns>FULL_NAME</columns>
    <columns>Applied_for__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Highest_Qualification__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Highest_Qualification__c</field>
        <operation>equals</operation>
        <value>BBA,MBA,BCA,MCA,B.Tech,M.Tech,Others</value>
    </filters>
    <label>Lead-Candidate</label>
</ListView>